--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,4 +13,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment="")
 +GameplayTagList=(Tag="Attributes.Vital.MaxEssence",DevComment="")
 +GameplayTagList=(Tag="Attributes.Vital.MaxHealth",DevComment="")
++GameplayTagList=(Tag="Message.Crystal.Essence",DevComment="")
++GameplayTagList=(Tag="Message.Crystal.Health",DevComment="")
++GameplayTagList=(Tag="Message.Potion.Essence",DevComment="")
++GameplayTagList=(Tag="Message.Potion.Health",DevComment="")
 
